--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #f0f0f0;
+}
+
+
+
+
+
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
