--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   background-color: #f8fafc;
   
   font-synthesis: none;
-  text-rendering: optimizeLegidity;
+  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
